# Rust

api-call/: Cargo.toml
api-call/src/: main.rs
apicall-stroreIn_db/: Cargo.toml
apicall-stroreIn_db/src/: db.rs  main.rs
async-await/: Cargo.toml
async-await/src/: main.rs
auth/: Cargo.toml
auth/src/: main.rs
chat/client/src/: main.rs
chat/server/src/: main.rs
compressPdf/: Cargo.toml  compressed_abc
compressPdf/src/: main.rs
csv/: collection
csv/src/: main.rs
decompress/src/: main.rs
decompress/ziptest/: new metamask data
get_req/: Cargo.toml
get_req/src/: main.rs
json_read/: Cargo.toml
json_read/src/: main.rs
json_write/: Cargo.toml
json_write/src/: main.rs
port-sniffer/src/: main.rs
snake-game/: Cargo.toml
snake-game/src/: draw.rs  game.rs  main.rs  snake.rs
