[package]
name = "async-await"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.0",features = ["blocking","json" ]}
error-chain = {version = "0.12.4"}
tokio = {version = "1.27.0", features = ["full"]}
